--- a/css/app.css
+++ b/css/app.css
@@ -1,113 +1,66 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-color: rgba(177, 218, 193, 0.411);
-    background-image: url("me.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+main {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+    margin: 5vh;
 }
 
-.header{
+.second {
+    margin-top: 5vh;
+}
+
+.povezave {
+    display: flex;
+    gap: 3vh;
     position: absolute;
-    background-color: rgb(22, 19, 19);
-    color:rgb(218, 214, 210);
-    text-align: center;
-    height: 20px;
-    width: 100%;
-    top: 0;
+    left: 5vh;
+    top: 25vh;
 }
 
-.first{
-    background-color: rgb(223, 209, 196);
-    border: 1px solid black;
-    border-radius: 2em;
-    position: relative;
-    margin: 35px 25px 35px 770px;
-    width: 400px;
-    padding: 5px;   
+.first {
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-style: italic;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.first p{
-    font-size: 20px;
-    text-align: center;
-}
-
-.slika1{
-    position: relative;
-    /* border: 1px solid black; */
-    width: 500px;
-    height: 400px;
-    border-radius: 20px;
-}
-
-img{
-    /* border: 1px solid black; */
-    position: relative;  
-    margin-top: 300px;
-    width: 383px;
-    height: 478px;
-    padding: 20px;
-    /* margin: 200px 500px 100px 500px; */
-    /* float: left; */
-}
-
-.second{
-    /* border: 1px solid black;  */
-    /* float: center; */
-    position: relative;
-    /* padding: 10px; */
-    /* text-align: justify; */
-    width: 400px;
-    height: auto;
-    margin-top: -400px;
-    /* margin-right: 50px; */
-    margin-left: 1170px;
-}
-
-.odstavek{
-    background-color: rgba(255, 255, 255, 0.993);
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 5px;
-    text-align: justify;
-}
-
-.povezave{
-    position: relative;
-    background-color: rgb(218, 214, 210);
-    border: 1px solid black;
-    border-radius: 10px;
-    float: right;
-    margin-right: 30px;
-    margin-top: -861px;
-    padding: 5px;
-}
-
-/* .tabela{
-    color: rgb(22, 19, 19);
+#specialTable {
     position: absolute;
-    margin-top: -50px;
-    margin-left: 30px;
-} */
-
-table, tr, td{
-    position: relative;
-    border: 1px solid black;
-    border-collapse: collapse;
-    margin-left: 30px;
-    width: 800px;
-    height: 30px;
-    text-align: center;
-    font-size: 20px;
-    margin-top: -840px;
+    right: 5vh;
+    top: 25vh;
+    width: 29%;
 }
 
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(185, 170, 170);
-    color: rgb(0, 0, 0);
-    text-align: center;
-  } 
+    float: right;
+}
+
+@media only screen and (max-width: 1200px){
+    #specialTable {
+        display: none;
+    }
+
+    .povezave {
+        display: none;
+    }
+}
+@media only screen and (max-width: 600px){
+    #specialTable {
+        display: none;
+    }
+
+    .povezave {
+        display: none;
+    }
+}
+@media only screen and (max-width: 425px){
+    #specialTable {
+        display: none;
+    }
+
+    .povezave {
+        display: none;
+    }
+}
